--- a/alistirma2.html
+++ b/alistirma2.html
@@ -1,4 +1,7 @@
-﻿<!doctype html>
+    <!-- DENEMEK İÇİN ATTIM SEVGİLER:))-->
+
+
+<!doctype html>
 
 <html>
 
@@ -51,3 +54,5 @@
 
 </body>
 <html />
+    
+
